# ai-decision-ledger

./: .gitignore  README.md
backend/: .env  .env.example  .env.txt  db.ts  package-lock.json  package.json  server.ts  tsconfig.json
backend/routes/: traces.ts
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/.next/: build-manifest.json  trace
frontend/.next/cache/webpack/client-development/: index.pack.gz.old
frontend/.next/cache/webpack/server-development/: index.pack.gz.old
frontend/.next/server/: _error.js  middleware-build-manifest.js  pages-manifest.json
frontend/.next/server/pages/: _app.js  _error.js  index.js  traces.js
frontend/.next/server/vendor-chunks/: @swc.js  next.js
frontend/.next/static/chunks/: _error.js  webpack.js
frontend/.next/static/chunks/fallback/: amp.js  webpack.js
frontend/.next/static/development/: _buildManifest.js
frontend/.next/static/webpack/: b6417fcef3a22287.webpack.hot-update.json  webpack.b6417fcef3a22287.hot-update.js  webpack.e8901e2518c23f1b.hot-update.js
frontend/api/: traces.ts
frontend/components/: LatencyBadge.tsx  Layout.tsx  ReplayDiff.tsx  ResponseDiff.tsx  TraceDetails.tsx  TraceTable.tsx  TraceTimeline.tsx
frontend/hooks/: useTraces.ts
frontend/pages/: _app.tsx  index.tsx  traces.tsx
frontend/pages/trace/: [id].tsx
frontend/pages/traces/: [id].tsx
frontend/styles/: globals.css
sdk/: index.ts  ledger.ts  package-lock.json  package.json  tsconfig.json  wrapOllama.ts
sdk/python/: ailedger.py  pyproject.toml
(+3 files in other folders)
