[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ailedger"
version = "0.1.0"
description = "AI Decision Ledger Python SDK"
authors = [{ name = "AI Decision Ledger" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["requests>=2.31.0"]

[project.urls]
Homepage = "https://example.com/ai-decision-ledger"

